--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/themes": "^3.2.1",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.0.0",
     "lucide-react": "^0.508.0",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0"
+    "socket.io-client": "^4.7.2",
+    "tailwind-merge": "^3.2.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
